# ai-experiments

./: .gitignore  README.md  openai_client.py  pyproject.toml
experiments/: constants.py  context_in_file.py  context_in_memory.py  context_with_simple_rag.py  crew_ai_simple.py  openai_agent_simple.py  semlib_simple.py  system_prompts.py  utils.py
langchain_basics/: prompt_template_basic.py  simple.py
linkedin_learning/: chatbot_q_and_a.py  extract_from_question.py  funny_chat_bot.py  generate_data.py  hello_api.py  helloqa_llamaindex.py  json_langchain.py  langchain_simple.py  librarian_eval.py  librarian_with_library.py  moderation_chat_bot.py  summary_docs.py  summary_docs.txt
multi_agent_langchain/: implementing_agents.py
tmp/: test.csv
