[project]
name = "openai-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "click>=8.2.1",
    "crewai>=0.150.0",
    "docx2txt>=0.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "llama-index>=0.12.52",
    "llama-index-llms-openai-like>=0.4.0",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
]
